@@ -19,9 +19,10 @@ subprojects {
     }
 
     dependencies {
-        testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
-        testImplementation 'org.assertj:assertj-core:3.27.3'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+        testImplementation 'org.assertj:assertj-core:3.27.3'
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
     }
 
     test {
@@ -30,6 +31,7 @@ subprojects {
 
     tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8'
+        options.compilerArgs += ['--enable-preview']
     }
 
     tasks.withType(Test).configureEach {
